# customer-loyalty-analytics

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/: decisions.md
python/: export_for_tableau.py  load_data.py  run_sql.py
python/models/: churn_features.py  churn_model.py
sql/marts/: fct_campaign_uplift.sql  fct_cohort_retention.sql  fct_rfm_scores.sql
sql/scoring/: rfm_segments.sql
