[project]
name = "customer-loyalty-analytics"
version = "0.1.0"
description = "Customer cohort retention, RFM segmentation, churn prediction, and campaign uplift analytics on the UCI Online Retail dataset."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "duckdb>=1.4.4",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "python-dotenv>=1.2.1",
    "openpyxl>=3.1.0",
]
